Cleaned up code and added new max of 60 dice rolled at once

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-522
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -21,7 +21,7 @@ open_scenes=["res://Main.tscn"]
 [ScriptEditor]
 
 open_scripts=[]
-open_help=[]
+open_help=["Theme"]
 script_split_offset=70
 list_split_offset=0
 
