--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Export/VtM Dice Roller.exe"
+export_path="Export/VtM Dice Roller Windows.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=true
